faster compiling